--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "fuse.js": "^6.6.2",
+    "github-slugger": "^2.0.0",
     "marked": "^4.2.12",
     "react-icons": "^4.7.1"
   },
@@ -24,7 +25,6 @@
     "@astrojs/tailwind": "^3.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/github-slugger": "^1.3.0",
     "@types/marked": "^4.0.8",
     "@types/react": "^18.0.28",
     "postcss": "^8.4.20",
