--- a/src/config/config.json
+++ b/src/config/config.json
@@ -23,7 +23,7 @@
   },
 
   "params": {
-    "contact_form_action": "#",
+    "contact_form_action": "https://fabform.io/f/{form-id}",
     "copyright": "Copyright © 2023 a theme by [Themefisher](https://themefisher.com)"
   },
 
