--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bookworm-light-astro",
-  "version": "1.1.3",
+  "name": "cones-and-shells",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
