--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
+  "arrowParens": "avoid",
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "proseWrap": "preserve",
+  "printWidth": 100,
   "overrides": [
     {
       "files": ["*.astro"],
