--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookworm-light-astro",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
@@ -8,34 +8,39 @@
     "format": "prettier -w ."
   },
   "dependencies": {
-    "@astrojs/image": "^0.14.1",
-    "@astrojs/mdx": "^0.16.0",
-    "@astrojs/rss": "^2.1.0",
-    "astro": "^2.0.11",
-    "date-fns": "^2.29.3",
-    "date-fns-tz": "^2.0.0",
-    "fuse.js": "^6.6.2",
-    "github-slugger": "^2.0.0",
-    "marked": "^4.2.12",
-    "react-icons": "^4.7.1"
-  },
-  "devDependencies": {
-    "@astrojs/react": "^2.0.2",
-    "@astrojs/sitemap": "^1.0.1",
-    "@astrojs/tailwind": "^3.0.1",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/marked": "^4.0.8",
-    "@types/react": "^18.0.28",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.4",
-    "prettier-plugin-astro": "^0.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.2",
+    "@astrojs/mdx": "^2.1.1",
+    "@astrojs/rss": "^4.0.4",
+    "@astrojs/react": "^3.0.9",
+    "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.3.2",
+    "astro-auto-import": "^0.4.2",
+    "astro-font": "^0.0.77",
+    "date-fns": "^3.3.1",
+    "fuse.js": "^7.0.0",
+    "gray-matter": "^4.0.3",
+    "marked": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.58.1",
-    "sharp": "^0.31.3",
-    "tailwind-bootstrap-grid": "^5.0.1",
-    "tailwindcss": "^3.2.6"
+    "react-icons": "^5.0.1",
+    "react-lite-youtube-embed": "^2.4.0",
+    "remark-collapse": "^0.1.2",
+    "remark-toc": "^9.0.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/github-slugger": "^1.3.0",
+    "@types/marked": "^5.0.2",
+    "@types/react": "^18.2.52",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "sass": "^1.70.0",
+    "sharp": "0.33.1",
+    "tailwind-bootstrap-grid": "^5.1.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
   }
 }
