--- a/src/config/config.json
+++ b/src/config/config.json
@@ -8,7 +8,8 @@
     "logo": "/images/logo.png",
     "logo_width": "200",
     "logo_height": "34",
-    "logo_text": "Bookworm Light"
+    "logo_text": "Bookworm Light",
+    "sitemap": "/sitemap-index.xml"
   },
 
   "settings": {
