--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.0.1",
-    "@astrojs/rss": "^4.0.6",
     "@astrojs/react": "^3.4.0",
+    "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.9.3",
@@ -18,6 +18,7 @@
     "astro-font": "^0.0.81",
     "date-fns": "^3.6.0",
     "fuse.js": "^7.0.0",
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.2",
     "react": "^18.3.1",
