--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
   "name": "bookworm-light-astro",
-  "version": "2.0.2",
+  "version": "3.0.0",
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "preview": "astro preview",
     "format": "prettier -w ."
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.9",
-    "@astrojs/rss": "^4.0.9",
-    "@astrojs/react": "^3.6.2",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "4.0.6",
+    "@astrojs/react": "4.1.5",
+    "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.9",
+    "@astrojs/tailwind": "5.1.4",
+    "astro": "5.1.7",
     "astro-auto-import": "^0.4.4",
     "astro-font": "^0.1.81",
     "date-fns": "^4.1.0",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
-    "marked": "^14.1.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "marked": "^15.0.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-lite-youtube-embed": "^2.4.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/github-slugger": "^1.3.0",
     "@types/marked": "^5.0.2",
-    "@types/react": "^18.3.12",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
+    "@types/react": "^19.0.7",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "sass": "^1.80.6",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "sass": "^1.83.4",
     "sharp": "0.33.5",
     "tailwind-bootstrap-grid": "^5.1.0",
-    "tailwindcss": "^3.4.14",
-    "typescript": "5.6.3"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
