Updated to Tailwind v4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookworm-light-astro",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "4.0.6",
-    "@astrojs/react": "4.1.5",
+    "@astrojs/mdx": "4.2.0",
+    "@astrojs/react": "4.2.1",
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "5.1.4",
-    "astro": "5.1.7",
+    "@tailwindcss/vite": "^4.0.14",
+    "astro": "5.5.2",
     "astro-auto-import": "^0.4.4",
-    "astro-font": "^0.1.81",
+    "astro-font": "^1.0.0",
     "date-fns": "^4.1.0",
-    "fuse.js": "^7.0.0",
+    "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
-    "marked": "^15.0.6",
+    "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-lite-youtube-embed": "^2.4.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0"
@@ -33,16 +33,14 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@types/github-slugger": "^1.3.0",
-    "@types/marked": "^5.0.2",
-    "@types/react": "^19.0.7",
-    "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
+    "@types/react": "^19.0.10",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "sass": "^1.83.4",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.85.1",
     "sharp": "0.33.5",
-    "tailwind-bootstrap-grid": "^5.1.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.8.2"
   }
 }
