--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookworm-light-astro",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
@@ -10,37 +10,39 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "4.2.0",
-    "@astrojs/react": "4.2.1",
+    "@astrojs/mdx": "4.3.0",
+    "@astrojs/react": "4.3.0",
     "@astrojs/rss": "4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
-    "@tailwindcss/vite": "^4.0.14",
-    "astro": "5.5.2",
+    "@astrojs/sitemap": "^3.4.0",
+    "@tailwindcss/vite": "^4.1.7",
+    "astro": "5.8.0",
     "astro-auto-import": "^0.4.4",
-    "astro-font": "^1.0.0",
+    "astro-font": "^1.1.0",
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
-    "marked": "^15.0.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "marked": "^15.0.12",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-lite-youtube-embed": "^2.4.0",
+    "@justinribeiro/lite-youtube": "^1.8.2",
     "remark-collapse": "^0.1.2",
-    "remark-toc": "^9.0.0"
+    "remark-toc": "^9.0.0",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/github-slugger": "^1.3.0",
-    "@types/react": "^19.0.10",
+    "@types/github-slugger": "^2.0.0",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "19.1.5",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.85.1",
+    "sass": "^1.89.0",
     "sharp": "0.33.5",
-    "tailwindcss": "^4.0.14",
-    "typescript": "^5.8.2"
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3"
   }
 }
