chore: Clean up code, update packages, and add new features -RSS Feed and GTM added -Converted to typescript -Removed unnecessary dependencies.
-Using React Icons, removed Feather Icons

-Added dynamicicon component.

-Updated all packages to the latest versions.

--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
   "name": "bookworm-light-astro",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "license": "MIT",
+  "type": "module",
+  "packageManager": "yarn@1.22.22",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "check": "astro check"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "4.3.0",
-    "@astrojs/react": "4.3.0",
-    "@astrojs/rss": "4.0.11",
-    "@astrojs/sitemap": "^3.4.0",
-    "@tailwindcss/vite": "^4.1.7",
-    "astro": "5.8.0",
-    "astro-auto-import": "^0.4.4",
+    "@astrojs/mdx": "4.3.7",
+    "@astrojs/react": "4.4.0",
+    "@astrojs/sitemap": "^3.6.0",
+    "astro": "5.14.4",
+    "astro-auto-import": "^0.4.5",
     "astro-font": "^1.1.0",
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
-    "marked": "^15.0.12",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "marked": "^16.4.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "@digi4care/astro-google-tagmanager": "^1.6.0",
     "@justinribeiro/lite-youtube": "^1.8.2",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
-    "vite": "^6.3.5"
+    "vite": "^7.1.9"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/github-slugger": "^2.0.0",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "19.1.5",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.14",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "19.2.1",
+    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.89.0",
-    "sharp": "0.33.5",
-    "tailwindcss": "^4.1.7",
-    "typescript": "^5.8.3"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "sharp": "0.34.4",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3"
   }
 }
